containers/workflow/kustomize/overlays/dev/worker-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-worker
spec:
  template:
    spec:
      containers:
        - name: n8n-worker
          resources:
            limits:
              cpu: "1"
              memory: 3Gi
            requests:
              cpu: 250m
              memory: 1Gi
